--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ $(document).ready(function() {
     printOptions();
   }
   $.ajax({
-    url: "johneiser.github.io/HackDeli/hackdelidata.xml",
+    url: "/HackDeli/hackdelidata.xml",
     dataType: "xml",
     success: init,
       error: function() {
