--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ pre {
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 var stack = [];
 $(document).ready(function() {
@@ -22,7 +22,7 @@ $(document).ready(function() {
     printOptions();
   }
   $.ajax({
-    url: "/HackDeli/hackdelidata.xml",
+    url: "hackdelidata.xml",
     dataType: "xml",
     success: init,
       error: function() {
