--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function popPrint() {
 
 ====================================================================
     </pre>
-    <input type="button" class="w3-button" onClick="popPrint()" value="<< Back"/>
+    <input id="back" type="button" class="w3-button" onClick="popPrint()" value="<< Back"/>
     <pre><h2 id="header"></h2></pre>
     <div>
       <pre id="output"></pre>
