--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@ body, p, h1, h2, h3, h4, h5, h6, pre, input, button {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 var stack = [];
+var parameters;
+var keys = ["type", "area", "option"];
 $(document).ready(function() {
   function init(document) {
     stack.push($(document).children($(document)[0]).children());
-    printOptions();
+    parameters = getParameters(location);
+    if (parameters[keys[0]]) {
+      pushPrint(parameters[keys[0]]);
+      if (parameters[keys[1]]) {
+        pushPrint(parameters[keys[1]]);
+        if (parameters[keys[2]]) {
+          pushPrint(parameters[keys[2]]);
+        }
+      }
+    } else {
+        printOptions();
+    }
   }
   $.ajax({
     url: "hackdelidata.xml",
@@ -59,15 +72,48 @@ function pushPrint(index) {
   root.each(function(i) {
     if (i == index) {
       stack.push($(this).children());
+      if (stack.length >=2 && stack.length <= 4) {
+        parameters[keys[stack.length-2]] = i;
+      }
     }
   });
+  setParameters();
   printOptions();
 }
 function popPrint() {
   if (stack.length > 1) {
     stack.pop();
+    if (stack.length >= 1 && stack.length <= 3) {
+      delete parameters[keys[stack.length-1]];
+    }
+    setParameters();
     printOptions();
   }
+}
+function setParameters() {
+  var hashStr = "#";
+  for (var k in parameters) {
+    hashStr += k;
+    hashStr += '=';
+    hashStr += parameters[k];
+    hashStr += "&";
+  }
+  window.location.hash = hashStr.substring(0, hashStr.length-1);
+}
+function getParameters(location) {
+  if (typeof location === 'undefined') {
+    location = window.location;
+  }
+  var hashParams = new (function Params() {})();
+  if (location.hash.length === 0) {
+    return hashParams;
+  };
+  var hashArray = location.hash.substring(1).split('&');
+  for (var i in hashArray) {
+    var keyValPair = hashArray[i].split('=');
+    hashParams[keyValPair[0]] = keyValPair[1];
+  }
+  return hashParams;
 }
 </script>
 </head>
